Impossible to set Shortcut (hotkey) on Transform Orientation or Pivot Point #75861

Closed
opened 2020-04-18 11:17:09 +02:00 by Sergey · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-15 22:31, hash: 32cd853294
Worked: (newest version of Blender that worked as expected)

Short description of error
Impossible to set Shortcut (hotkey) on Transform Orientation or Pivot Point

Exact steps for others to reproduce the error
1 - Open menu Transform Orientation
2 - Right-click on Global (for example)
3 -Click Assign Shortcut and choose key
4 - Try to use your new hotkey -> Error

About Pivot Point - Right-click on items in menu Transform Pivot Point does not open a menu with the button to assign a hotkey

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-15 22:31, hash: `32cd853294` Worked: (newest version of Blender that worked as expected) **Short description of error** Impossible to set Shortcut (hotkey) on Transform Orientation or Pivot Point **Exact steps for others to reproduce the error** 1 - Open menu Transform Orientation 2 - Right-click on Global (for example) 3 -Click Assign Shortcut and choose key 4 - Try to use your new hotkey -> Error About Pivot Point - Right-click on items in menu Transform Pivot Point does not open a menu with the button to assign a hotkey
Author

Added subscriber: @borschberry

Added subscriber: @borschberry
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Try to use your new hotkey -> Error

Traceback (most recent call last):
  File "Blender.app/Contents/Resources/2.90/scripts/startup/bl_operators/wm.py", line 525, in execute
    value = context_path_validate(context, data_path)
  File "Blender.app/Contents/Resources/2.90/scripts/startup/bl_operators/wm.py", line 84, in context_path_validate
    value = eval("context.%s" % data_path) if data_path else Ellipsis
  File "<string>", line 1, in <module>
AttributeError: 'Scene' object has no attribute 'type'
> Try to use your new hotkey -> Error ``` Traceback (most recent call last): File "Blender.app/Contents/Resources/2.90/scripts/startup/bl_operators/wm.py", line 525, in execute value = context_path_validate(context, data_path) File "Blender.app/Contents/Resources/2.90/scripts/startup/bl_operators/wm.py", line 84, in context_path_validate value = eval("context.%s" % data_path) if data_path else Ellipsis File "<string>", line 1, in <module> AttributeError: 'Scene' object has no attribute 'type' ```

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2020-04-22 15:50:43 +02:00

This is usual invalid RNA path, fix incoming.

This is usual invalid RNA path, fix incoming.

This issue was referenced by 28f7c80c46

This issue was referenced by 28f7c80c464b71911f926932f6a789efeea14c1e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75861
No description provided.