Fix invalid RNA path for transform orientations.

Fix T75861: Impossible to set Shortcut (hotkey) on Transform Orientation
or Pivot Point.